setup_playbook: disable gpg check for epel repo
it's causing issues on every freshly provisioned server. probably just
missing proper gpg import first but this looks like an easy enough
workaround

Change-Id: Ic3c68463e10fee3cb1623b8f447379d6142da091
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -62,6 +62,7 @@
         - name: install epel
           dnf:
             name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
+            disable_gpg_check: yes
           become: true
           register: epel
 
