--- a/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
@@ -77,14 +77,13 @@ domains:
         name: root
         dev: vda
         format: qcow2
+        template_type: qcow2
         {% if root_disk_path -%}
-        template_type: qcow2
         path: {{ root_disk_path -}}
-        {% elif env.use_ost_images == "1" -%}
-        template_type: qcow2
-        path: {{ env.host_image }}
+        {% elif loop.first -%}
+        path: {{ env.he_image }}
         {% else -%}
-        template_name: {{ templates.host }}
+        path: {{ env.host_image }}
         {%- endif %}
       - name: tmp
         size: 80G
@@ -101,11 +100,6 @@ domains:
         - $LAGO_INITFILE_PATH/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/deploy-scripts/add_tmp_part_el7.sh
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_host_el7.sh
-        {% if loop.first -%}
-        - $LAGO_INITFILE_PATH/deploy-scripts/install_he_4.sh
-        {% else -%}
-        - $LAGO_INITFILE_PATH/deploy-scripts/install_he_4_additional_host.sh
-        {%- endif %}
         {% if env.coverage == "true" -%}
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_host_vdsm_coverage.sh
         {%- endif %}
