--- a/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
@@ -26,8 +26,7 @@ domains:
       - net: lago-{{ env.suite_name }}-net-management
       - net: lago-{{ env.suite_name }}-net-mgmt-ipv6
     disks:
-      - template_name: {{ templates.storage }}
-        type: template
+      - type: template
         {% if env.use_ost_images == "1" -%}
         template_type: qcow2
         path: {{ env.upgrade_image }}
@@ -55,7 +54,11 @@ domains:
         format: qcow2
     metadata:
       deploy-scripts:
+        {%- if env.add_plain_repos is defined and env.add_plain_repos|length %}
+        - add_plain_repos.sh
+        {%- else %}
         - $LAGO_INITFILE_PATH/deploy-scripts/add_local_repo.sh
+        {%- endif %}
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_storage_unified.sh
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_storage_unified_he_extra_el7.sh
     artifacts:
@@ -97,7 +100,11 @@ domains:
         {% if check_node_status -%}
         - $LAGO_INITFILE_PATH/deploy-scripts/check_node_status.sh
         {%- endif %}
+        {%- if env.add_plain_repos is defined and env.add_plain_repos|length %}
+        - add_plain_repos.sh
+        {%- else %}
         - $LAGO_INITFILE_PATH/deploy-scripts/add_local_repo.sh
+        {%- endif %}
         - $LAGO_INITFILE_PATH/deploy-scripts/add_tmp_part_el7.sh
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_host_el7.sh
         {% if env.coverage == "true" -%}
