Add rhel8 distro for network suite
Change-Id: I4afc8239b8543305cde177a1151fd419f670ff66
Signed-off-by: Galit Rosenthal <grosenth@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -29,6 +29,11 @@ stage:
                     jenkins_master: upstream
                     hostdistro: same
                     support-nesting-level: 2
+              - rhel8:
+                  runtime-requirements:
+                    jenkins_master: psi
+                    support-nesting-level: 2
+                    hostdistro: same
         - ansible_suite_master:
             distributions:
               - el8:
