--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 # Logging
 log_format = %(asctime)s,%(msecs)03d %(levelname)-7s [%(name)s] %(message)s (%(module)s:%(lineno)d)
-log_date_format = %Y-%m-%d %H:%M:%S
+log_date_format = %Y-%m-%d %H:%M:%S%z
 log_level = info
 
 # Enable to see live logs while the tests are running, for debuging tests.
