tox: Introduce pylint
Ignoring all the errors for now until are fixed.

Change-Id: I6fb5f648b8a5e1c28035bd91959a9c12daf773a1
Signed-off-by: Bell Levin <blevin@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8
+envlist = flake8, pylint
 skipsdist = true
 
 [testenv:flake8]
@@ -7,6 +7,19 @@ deps =
     flake8==3.5
 commands=
     flake8 \
+        ost_utils \
+        basic-suite-master/test-scenarios \
+        basic-suite-master/test_utils \
+        he-basic-suite-master/test-scenarios
+
+[testenv:pylint]
+deps =
+    pylint==2.6.0
+commands =
+    pylint \
+        -j{env:PYLINT_JOBS:2} \
+        --reports=no \
+        --score=no \
         ost_utils \
         basic-suite-master/test-scenarios \
         basic-suite-master/test_utils \
