flake8: Rearrange list of ignores
While keeping the list of flake8's ignores sorted alphabetically
is nice, it makes more sense to sort them by the frequency of their
occurence. That way we can start fixing them starting with the ones
that occur the least amount of times.

The occurence count for each of these ATM of writing is:

  1 E127
  1 E222
  1 E301
  1 E721
  2 E211
  2 E241
  2 E262
  2 F402
  2 W391
  3 E266
  3 W503
  4 E131
  5 E126
  5 E203
  5 E712
  6 E123
  7 E111
  7 E251
  7 F405
  7 F841
  7 W191
  8 E128
  8 E265
  9 E121
  9 E226
  9 F821
 10 E303
 11 E225
 12 E722
 13 E101
 13 E202
 14 E122
 21 E231
 25 F811
 30 F403
 43 E302
 50 E261
112 F401
236 E501

Change-Id: I7bc6b7fec46368a7532477d8b7a14b632e6092f9
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -30,46 +30,43 @@ commands =
 [flake8]
 # TODO: Reformat code so that most of these can be removed eventually
 ignore =
-    E101,
-    E111,
-    E117,
-    E121,
-    E122,
-    E123,
-    E126,
-    E127,
-    E128,
-    E131,
-    E202,
-    E203,
-    E211,
-    E222,
-    E225,
-    E226,
-    E231,
-    E241,
-    E251,
-    E261,
-    E262,
-    E265,
-    E265,
-    E266,
-    E301,
-    E302,
-    E303,
-    E501,
-    E712,
-    E721,
-    E722,
-    E741,
-    F401,
-    F402,
-    F403,
-    F405,
-    F811,
-    F821,
-    F841,
-    W191,
-    W391,
-    W503,
+    E127, # continuation line over-indented for visual indent
+    E222, # multiple spaces after operator
+    E301, # expected 1 blank line, found 0
+    E721, # do not compare types, use 'isinstance()'
+    E211, # whitespace before '('
+    E241, # multiple spaces after ','
+    E262, # inline comment should start with '# '
+    F402, # shadowed import
+    W391, # blank line at end of file
+    E266, # too many leading '#' for block comment
+    W503, # line break before binary operator
+    E131, # continuation line unaligned for hanging indent
+    E126, # continuation line over-indented for hanging indent
+    E203, # whitespace before ','
+    E712, # comparison to True should be 'if cond is True:' or 'if cond:'
+    E123, # closing bracket does not match indentation of opening bracket's line
+    E111, # indentation is not a multiple of four
+    E251, # unexpected spaces around keyword / parameter equals
+    F405, # something may be undefined, or defined from star imports
+    F841, # local variable is assigned to but never used
+    W191, # indentation contains tabs
+    E128, # continuation line under-indented for visual indent
+    E265, # block comment should start with '# '
+    E121, # continuation line under-indented for hanging indent
+    E226, # missing whitespace around arithmetic operator
+    F821, # undefined name
+    E303, # too many blank lines
+    E225, # missing whitespace around operator
+    E722, # do not use bare except
+    E101, # indentation contains mixed spaces and tabs
+    E202, # whitespace before ')'
+    E122, # continuation line missing indentation or outdented
+    E231, # missing whitespace after ','
+    F811, # redefinition of unused variable
+    F403, # start import used, unable to detect undefined names
+    E302, # expected 2 blank lines, found 1
+    E261, # at least two spaces before inline comment
+    F401, # unused star import
+    E501, # line too long
 show_source = True
