pylint: Fix searched directories
Pylint treats all searched dirs as modules, this means we need to have
__init__.py in all our dirs. With these changes the number of found
errors has greatly risen, so we've disabled non-error checkers for now.
This should also make it easier to extend this to network-suite.

      1 E1003:bad-super-call
      1 E1128:assignment-from-none
      2 E0307:invalid-str-returned
      2 E1120:no-value-for-parameter
      3 E1123:unexpected-keyword-arg
      6 E1101:no-member
      7 E1136:unsubscriptable-object
     18 E0611:no-name-in-module
     24 E0602:undefined-variable
     31 E0401:import-error

Change-Id: I5b57a5fa6ed00a048289679634c9e26450fb512e
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -21,9 +21,10 @@ commands =
         -j{env:PYLINT_JOBS:2} \
         --reports=no \
         --score=no \
-        ost_utils \
+        ost_utils/ost_utils \
         basic-suite-master/test-scenarios \
         basic-suite-master/test_utils \
+        common/test-scenarios-files/selenium \
         he-basic-suite-master/test-scenarios
 
 [flake8]
