automation: avoid 4.3 branch stuff to be sent to master
Change-Id: I2b5e6694f20f46f170b09381796a5819a887ca02
Signed-off-by: Sandro Bonazzola <sbonazzo@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -79,4 +79,4 @@ runtime-requirements:
   support-nesting-level: 2
   isolation_level: container
 release-branches:
-  master: [ovirt-master, ovirt-4.3]
+  master: ovirt-master
