flake8: Add test_utils/selenium
Flake8 does not follow symlinks, so we need to add such dirs
separately. This patch also fixes 2 one liner issues that
flake8 raises in this folder (and are not ignored).

Change-Id: I16fd316d5ec0a10d4f2b98b2d5865759879ca93c
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ commands=
         ost_utils \
         basic-suite-master/test-scenarios \
         basic-suite-master/test_utils \
+        common/test-scenarios-files/selenium \
         he-basic-suite-master/test-scenarios
 
 [testenv:pylint]
