network: build ovirtlib rpm for el8 only
Default was el7 which entailed usage of python-2 which should not be
supported by ovirtlib anymore.
Makefile default target is no longer 'all' so this has to be specified
explicitly.

Change-Id: If7a701ad1fda5bf39ec7b8138a8c30e280f786c1
Signed-off-by: Eitan Raviv <eraviv@redhat.com>

--- a/network-suite-master/Makefile
+++ b/network-suite-master/Makefile
@@ -6,7 +6,7 @@ TIMESTAMP:=$(shell date +'%Y%m%d%H%M%S')
 RELEASE_SUFFIX=0.$(TIMESTAMP).git$(GITHASH)
 TARBALL=$(NAME)-$(VERSION).tar.gz
 SPEC=$(NAME).spec
-PYTHON=python
+PYTHON=python3
 
 GENERATED = ovirtlib/version.py \
 	    $(SPEC) \
