ansble: Fix the suite
Add of the pytest to ansible test-scenario
Rename the test scenario from 001_initialize_engine.py to test_001_initialize_engine.py
Update control.sh to match with a basic suite
Update ovirt-deploy role with new hostnames instead of groups.
Update health_status from filter success to check if it is correct
status.
Link ansible_suite_master.packages to basic_suite_master.packages.el8

Change-Id: Ieb1816ddcb1e969c63f0a3b74f8147b99df950cc
Signed-off-by: Martin Necas <mnecas@redhat.com>

--- a/ansible-suite-master/engine.yml
+++ b/ansible-suite-master/engine.yml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy oVirt engine
-  hosts: vm-type=ovirt-engine
+  hosts: lago-ansible-suite-master-engine
 
   roles:
     - ovirt-deploy
