--- a/stdci.yaml
+++ b/stdci.yaml
@@ -25,6 +25,12 @@ stage:
                   runtime-requirements:
                     hostdistro: same
                     support-nesting-level: 2
+        - ansible_suite_master:
+            distributions:
+              - el8:
+                  runtime-requirements:
+                    hostdistro: same
+                    support-nesting-level: 2
         - test-ost-container:
             runif:
               filechanged: ['automation/test-ost-container*', 'run-ost-container.sh']
