--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,8 @@ commands=
         ost_utils \
         basic-suite-master/test-scenarios \
         basic-suite-master/test_utils \
-        he-basic-suite-master/test-scenarios
+        he-basic-suite-master/test-scenarios \
+        ansible-suite-master/test-scenarios
 
 [testenv:pylint]
 deps =
@@ -23,7 +24,8 @@ commands =
         ost_utils/ost_utils \
         basic-suite-master/test-scenarios \
         basic-suite-master/test_utils \
-        he-basic-suite-master/test-scenarios
+        he-basic-suite-master/test-scenarios \
+        ansible-suite-master/test-scenarios
 
 [flake8]
 # TODO: Reformat code so that most of these can be removed eventually
