--- a/ansible-suite-master/ovirt-deploy/tasks/bootstrap.yml
+++ b/ansible-suite-master/ovirt-deploy/tasks/bootstrap.yml
@@ -36,14 +36,14 @@
     state: present
     name: cockpit-ovirt-dashboard
   delegate_to: "{{ item }}"
-  with_items: "{{ groups['vm-type=ovirt-host'] }}"
+  with_items: ['lago-ansible-suite-master-host-0', 'lago-ansible-suite-master-host-1']
 
 - name: Remove temporary RPM files
   file:
     state: absent
     path: "/dev/shm/*rpm"
   delegate_to: "{{ item }}"
-  with_items: "{{ groups['vm-type=ovirt-host'] }}"
+  with_items: ['lago-ansible-suite-master-host-0', 'lago-ansible-suite-master-host-1']
 
 - name: Add NFS storage
   ovirt_storage_domain:
