pylint: Disable error checks on individual lines
Change-Id: Iaf98a4eb45531336344fec8e7e0b97d729a76aaf
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 # PIP requirements for OST
+-e ost_utils
+pylint==2.6.0
 pytest
 selenium
 tox
 # network suite deps
 flake8
-pylint
 openstacksdk
 contextlib2
 # there's a conflict between rpm and pip versions on regular el8 hosts
