--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,14 @@
 envlist = flake8, pylint
 skipsdist = true
 
+[testenv]
+basepython = python3.6
+
 [testenv:flake8]
 deps =
     flake8==3.5
-commands=
-    flake8 \
+commands =
+    {envpython} -m flake8 \
         ost_utils \
         basic-suite-master/test-scenarios \
         basic-suite-master/test_utils \
@@ -14,10 +17,12 @@ commands=
         ansible-suite-master/test-scenarios
 
 [testenv:pylint]
+sitepackages = true
+passenv = *
 deps =
-    pylint==2.6.0
+    -rrequirements.txt
 commands =
-    pylint \
+    {envpython} -m pylint \
         -j{env:PYLINT_JOBS:2} \
         --reports=no \
         --score=no \
