network, pylint: Run pylint using tox
Change-Id: If2061b662db71a3d6f9ccfecb2e7e0d67506c15c
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,11 @@ commands =
         basic-suite-master/test-scenarios \
         basic-suite-master/test_utils \
         he-basic-suite-master/test-scenarios \
-        ansible-suite-master/test-scenarios
+        ansible-suite-master/test-scenarios \
+        network-suite-master/fixtures \
+        network-suite-master/ovirtlib \
+        network-suite-master/testlib \
+        network-suite-master/test-scenarios
 
 [flake8]
 # TODO: Reformat code so that most of these can be removed eventually
