HE: LagoInitFile: Use default vm-type
So we do not need anymore python3-lago-ovirt plugin for HE.

Change-Id: Iea1ce1bf51fc2e4d010537465afdc02aa4bbbeb3
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
@@ -1,7 +1,7 @@
 domains:
   lago-{{ env.suite_name }}-engine:
     vm-provider: ssh
-    vm-type: ovirt-engine
+    vm-type: default
     distro: el7
     service_provider: systemd
     ssh-password: 123456
@@ -68,7 +68,7 @@ domains:
 
 {%- for i in range(hostCount) %}
   lago-{{ env.suite_name }}-host-{{ i }}:
-    vm-type: ovirt-host
+    vm-type: default
     distro: el7
     service_provider: systemd
     memory: 5744
