ansible: run playbook on engine VM
The playbooks were run on the OST agent.
Now the playbooks will be executed in the engine VM with
ovirt-ansible-collection package installed from tested repo.
The patch also contains removal of old lago logs, testing if
the collection is properly used.
Ansible logs were moved to the ansible_logs.

Change-Id: I37aed55679a9fc2911c4c9efe074ea95521b99a9
Signed-off-by: Martin Necas <mnecas@redhat.com>

--- a/ansible-suite-master/ovirt-deploy/tasks/main.yml
+++ b/ansible-suite-master/ovirt-deploy/tasks/main.yml
@@ -11,7 +11,7 @@
     ignore_errors: true
 
   - name: Login to oVirt
-    ovirt_auth:
+    ovirt.ovirt.ovirt_auth:
       url: "{{ engine_url }}"
       username: "{{ engine_user }}"
       password: "{{ engine_password }}"
@@ -24,29 +24,15 @@
     tags:
       - always
 
-  - block:
-    - name: Include bootstrap tasks
-      include: bootstrap.yml
-      tags:
-        - bootstrap
+  - name: Include bootstrap tasks
+    include: bootstrap.yml
+    tags:
+      - bootstrap
 
-    always:
-      - name: Collect bootstrap tasks logs
-        include: log.yml task_name=bootstrap
-        tags:
-          - bootstrap
-
-  - block:
-    - name: Include sanity tasks
-      include: sanity.yml
-      tags:
-        - sanity
-
-    always:
-      - name: Collect sanity tasks logs
-        include: log.yml task_name=sanity
-        tags:
-          - sanity
+  - name: Include sanity tasks
+    include: sanity.yml
+    tags:
+      - sanity
 
   - name: Logout from oVirt
     ovirt_auth:
