--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,14 @@
 [pytest]
 # Logging
-log_format = %(asctime)s,%(msecs)03d %(levelname)-7s (%(threadName)s) [%(name)s] %(message)s (%(module)s:%(lineno)d)
+log_format = %(asctime)s,%(msecs)03d %(levelname)-7s [%(name)s] %(message)s (%(module)s:%(lineno)d)
 log_date_format = %Y-%m-%d %H:%M:%S
 log_level = info
 
 # Enable to see live logs while the tests are running, for debuging tests.
-log_cli = false
+log_cli = true
+
+#Log into file
+log_file = exported-artifacts/pytest.log
+log_file_level = debug
+log_file_format = %(asctime)s,%(msecs)03d %(levelname)-7s (%(threadName)s) [%(name)s] %(message)s (%(module)s:%(lineno)d)
+log_file_date_format = %Y-%m-%d %H:%M:%S:%z
