ovirtlib: run on el8 host
Change in stdci.yaml created to ensure running on el8 host and
not el7 host running el8 mock.

Change-Id: I2a5f838d25fcc0063cdf85cde4a1473e0987c615
Signed-off-by: hbraha <hbraha@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -56,7 +56,10 @@ stage:
               fromfile: 'automation/basic_suite_master.sh'
         - build_ovirtlib:
             distributions:
-             - el8
+             - el8:
+                 runtime-requirements:
+                   hostdistro: same
+                   support-nesting-level: 2
             runif:
               filechanged:
                 - 'automation/build-artifacts*'
