setup: add packages required for ost-images
it's not required for OST itself, but ost-images don't have an
independent setup so let's add it here

Change-Id: Ie95845131efa42f52000dcba92effd63e878f4f8
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -66,7 +66,7 @@
           become: true
           register: epel
 
-        - name: install required packages
+        - name: install required packages for OST
           dnf:
             name:
               - ansible
@@ -78,6 +78,16 @@
               - python3-ovirt-engine-sdk4
               - python3-paramiko
               - python3-requests
+            state: latest
+          become: true
+
+        - name: install required packages for building ost-images
+          dnf:
+            name:
+              - autoconf
+              - automake
+              - createrepo
+              - make
             state: latest
           become: true
 
