setup: do not upgrade ansible during deployment
ansible doesn't like that, see https://stackoverflow.com/a/66710089
This is relevant for local deployments, but that's fairly common.

Change-Id: I2fc8668d05e28cdbc38d65205221e7c2197adb39
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -70,6 +70,9 @@
           dnf:
             name:
               - ansible
+            state: present
+          dnf:
+            name:
               - git
               - lago
               - openssl
