setup: add rpm-build for ost-images build
Change-Id: I9c46b2ae0c8d4cbaf52210ca94c51da7df51fc5d
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -91,6 +91,7 @@
               - automake
               - createrepo
               - make
+              - rpm-build
             state: latest
           become: true
 
