he: Don't use big tmp on non-HE host
We set up a big '/var/tmp' mount for both hosts in HE suite.
The host on which we deploy HE probably needs it, but the non-HE one
should do fine without it.

The mount causes problems with host deployment from time to time -
after rebooting the host drops to emergency shell. Further inspection
shows problems with the disk used for '/var/tmp/':

 -- Unit lvm2-activation-early.service has begun starting up.
 Mar 29 13:24:55 localhost.localdomain systemd[1]: var-tmp.mount: Bound to unit dev-disk-by\x2did-scsi\x2d0QEMU_QEMU_HARDDISK_2.device, but unit isn't active.
 Mar 29 13:24:55 localhost.localdomain systemd[1]: Dependency failed for /var/tmp.
 -- Subject: Unit var-tmp.mount has failed

This failure makes 'local-fs.target' to fail.

Not sure why the above happens - maybe it's simply because
the machine running OST doesn't have enough free space.
Nevertheless, as already said - we should do fine without having
this big '/var/tmp' on the host where we don't deploy HE.

Change-Id: I813450037e744796ca3bb65efeebcafeb198d891
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
@@ -105,7 +105,9 @@ domains:
         {%- else %}
         - $OST_REPO_ROOT/common/deploy-scripts/dnf_upgrade.sh
         {%- endif %}
+        {% if loop.first -%}
         - $OST_REPO_ROOT/common/deploy-scripts/add_tmp_part_el7.sh
+        {%- endif %}
         - $OST_REPO_ROOT/common/deploy-scripts/setup_host_el7.sh
     artifacts:
       - /etc/resolv.conf
