flake8, network: Use tox flake8 run on network suite
Our in intention in having 2 separate runs of flake8, 1 for network
and 1 for the rest, was that network suite is in better state and we
needed to disable some checks for other suites. This approach however
backfired, as the network flake8 used tox.ini config anyway, including
the ignores.

This patch separates the ignores per folder, so that each suite gets
the best linting coverage it can. This way we can also use just one
flake8 run and avoid cluttering of the enviroment. To do all of this
we need flake8>=3.7.0, so we can as well use the newest one.

Change-Id: I0bc6d5387e41177cafbc3fe65de033abc46f5c05
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -7,14 +7,18 @@ basepython = python3.6
 
 [testenv:flake8]
 deps =
-    flake8==3.5
+    flake8==3.9.0
 commands =
     {envpython} -m flake8 \
-        ost_utils \
+        ost_utils/ost_utils \
         basic-suite-master/test-scenarios \
         basic-suite-master/test_utils \
         he-basic-suite-master/test-scenarios \
-        ansible-suite-master/test-scenarios
+        ansible-suite-master/test-scenarios \
+        network-suite-master/fixtures \
+        network-suite-master/ovirtlib \
+        network-suite-master/testlib \
+        network-suite-master/test-scenarios
 
 [testenv:pylint]
 sitepackages = true
@@ -38,38 +42,13 @@ commands =
 
 [flake8]
 # TODO: Reformat code so that most of these can be removed eventually
-ignore =
-    E127, # continuation line over-indented for visual indent
-    E721, # do not compare types, use 'isinstance()'
-    E211, # whitespace before '('
-    E262, # inline comment should start with '# '
-    F402, # shadowed import
-    W391, # blank line at end of file
-    E131, # continuation line unaligned for hanging indent
-    E126, # continuation line over-indented for hanging indent
-    E203, # whitespace before ','
-    E712, # comparison to True should be 'if cond is True:' or 'if cond:'
-    E123, # closing bracket does not match indentation of opening bracket's line
-    E111, # indentation is not a multiple of four
-    E251, # unexpected spaces around keyword / parameter equals
-    F405, # something may be undefined, or defined from star imports
-    F841, # local variable is assigned to but never used
-    W191, # indentation contains tabs
-    E128, # continuation line under-indented for visual indent
-    E265, # block comment should start with '# '
-    E121, # continuation line under-indented for hanging indent
-    E226, # missing whitespace around arithmetic operator
-    E303, # too many blank lines
-    E225, # missing whitespace around operator
-    E722, # do not use bare except
-    E101, # indentation contains mixed spaces and tabs
-    E202, # whitespace before ')'
-    E122, # continuation line missing indentation or outdented
-    E231, # missing whitespace after ','
-    F811, # redefinition of unused variable
-    F403, # start import used, unable to detect undefined names
-    E302, # expected 2 blank lines, found 1
-    E261, # at least two spaces before inline comment
-    F401, # unused star import
-    E501, # line too long
+per-file-ignores =
+    ost_utils/ost_utils/*:E101,E117,E128,E261,E712,W191,E225,F403,E231,F841,F811,F405,E302,F401,W391,E501
+    basic-suite-master/test-scenarios/*:E117,E127,E203,E211,E225,E262,E721,E741,W391,E202,F402,E712,F405,F841,E128,E131,E265,E111,E231,F632,E251,W606,E122,E722,E302,F811,F403,E261,F401,E501
+    basic-suite-master/test_utils/*:E203,E225,E302,E303,E722,F841,E261,F401,E501
+    he-basic-suite-master/test-scenarios/*:E117,E203,E211,E262,E721,E741,F811,E128,E202,E712,F402,F841,E111,E131,E231,E265,E251,W606,E122,E302,F401,F403,E261,E501
+    ansible-suite-master/test-scenarios/*:E265,E302,E501,F403,W391,F401
+    network-suite-master/fixtures/*:F401
+    network-suite-master/ovirtlib/*:W605
+    network-suite-master/test-scenarios/*:E117
 show_source = True
