flake8, network: Fix recent issues
Because of switch to different way of running flake8, some of the
code issues were ignored. This patch fixes them in network suite.

Change-Id: I9ba672a4d7b734e4db545ebd02366dd7d538d89b
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -41,14 +41,12 @@ commands =
         network-suite-master/test-scenarios
 
 [flake8]
-# TODO: Reformat code so that most of these can be removed eventually
 per-file-ignores =
+    conftest.py:F401
+    # TODO: Reformat code so that most of these can be removed eventually
     ost_utils/ost_utils/*:E101,E117,E128,E261,E712,W191,E225,F403,E231,F841,F811,F405,E302,F401,W391,E501
     basic-suite-master/test-scenarios/*:E117,E127,E203,E211,E225,E262,E721,E741,W391,E202,F402,E712,F405,F841,E128,E131,E265,E111,E231,F632,E251,W606,E122,E722,E302,F811,F403,E261,F401,E501
     basic-suite-master/test_utils/*:E203,E225,E302,E303,E722,F841,E261,F401,E501
     he-basic-suite-master/test-scenarios/*:E117,E203,E211,E262,E721,E741,F811,E128,E202,E712,F402,F841,E111,E131,E231,E265,E251,W606,E122,E302,F401,F403,E261,E501
     ansible-suite-master/test-scenarios/*:E265,E302,E501,F403,W391,F401
-    network-suite-master/fixtures/*:F401
-    network-suite-master/ovirtlib/*:W605
-    network-suite-master/test-scenarios/*:E117
 show_source = True
