--- a/hc-basic-suite-master/LagoInitFile.in
+++ b/hc-basic-suite-master/LagoInitFile.in
@@ -1,7 +1,7 @@
 domains:
   lago-{{ env.suite_name }}-engine:
     vm-provider: ssh
-    vm-type: ovirt-engine
+    vm-type: default
     ssh-password: 123456
     distro: el8
     service_provider: systemd
@@ -15,7 +15,7 @@ domains:
 
 {%- for i in range(hostCount) %}
   lago-{{ env.suite_name }}-host-{{ i }}:
-    vm-type: ovirt-host
+    vm-type: default
     distro: el8
     memory: 5120
     nics:
@@ -49,7 +49,7 @@ domains:
       ovirt-capabilities:
         - snapshot-live-merge
       deploy-scripts:
-        - $OST_REPO_ROOT/common/deploy-scripts/add_local_repo.sh
+        - $OST_REPO_ROOT/common/deploy-scripts/dnf_upgrade.sh
         - $OST_REPO_ROOT/common/deploy-scripts/setup_host_el7.sh
         - $SUITE/hc_setup_host.sh
         {% if loop.first -%}
