--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pylint==2.7.2
 pytest==6.2.2
 selenium
 tox
+# basic suite deps
+requests
 # network suite deps
 openstacksdk==0.36.4
-# there's a conflict between rpm and pip versions on regular el8 hosts
-requests
