ost: Install python deps using tox
Unify the depndency installation accross the suits using tox.

Change-Id: Icf45565a1157b4ae55b23387506c6af58f0f462c
Signed-off-by: Andrej Cernek <acernek@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,15 @@
 [tox]
-envlist = flake8, pylint
+envlist = deps, flake8, pylint
 skipsdist = true
 
 [testenv]
 basepython = python3.6
+
+[testenv:deps]
+sitepackages = true
+passenv = *
+deps =
+    -rrequirements.txt
 
 [testenv:flake8]
 deps =
@@ -26,6 +32,7 @@ sitepackages = true
 passenv = *
 deps =
     -rrequirements.txt
+    pylint==2.7.2
 commands =
     {envpython} -m pylint \
         -j{env:PYLINT_JOBS:2} \
