--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ commands =
         ost_utils/ost_utils \
         basic-suite-master/test-scenarios \
         basic-suite-master/test_utils \
+        hc-basic-suite-master/test-scenarios \
         he-basic-suite-master/test-scenarios \
         ansible-suite-master/test-scenarios \
         network-suite-master/fixtures \
@@ -33,6 +34,7 @@ commands =
         ost_utils/ost_utils \
         basic-suite-master/test-scenarios \
         basic-suite-master/test_utils \
+        hc-basic-suite-master/test-scenarios \
         he-basic-suite-master/test-scenarios \
         ansible-suite-master/test-scenarios \
         network-suite-master/fixtures \
@@ -48,4 +50,5 @@ per-file-ignores =
     basic-suite-master/test-scenarios/*:E117,E127,E203,E211,E225,E262,E721,E741,W391,E202,F402,E712,F405,F841,E128,E131,E265,E111,E231,F632,E251,W606,E122,E722,E302,F811,F403,E261,F401,E501
     basic-suite-master/test_utils/*:E203,E225,E302,E303,E722,F841,E261,F401,E501
     he-basic-suite-master/test-scenarios/*:E117,E203,E211,E262,E721,E741,F811,E128,E202,E712,F402,F841,E111,E131,E231,E265,E251,W606,E122,E302,F401,F403,E261,E501
+    hc-basic-suite-master/test-scenarios/*:E117,E203,E211,E265,E741,E202,E261,F403,E302,F401,E501
 show_source = True
