--- a/hc-basic-suite-master/LagoInitFile.in
+++ b/hc-basic-suite-master/LagoInitFile.in
@@ -23,6 +23,8 @@ domains:
     disks:
       - template_name: {{ templates.host }}
         type: template
+        template_type: qcow2
+        path: {{ env.host_image }}
         name: root
         dev: vda
         format: qcow2
