lagofy: Resolve quirks around 'add_plain_repos.sh'
We should use an absolute path for 'add_plain_repos.sh' like
we do for all other deployment scripts.

Additionally, for unknown reason ansible's 'shell' module doesn't
work with the '# generated file' comment we place in the script,
so let's remove it.

Change-Id: I1b4fa4169ffa8bf08eee1d98cad94f67724fdc31
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -38,7 +38,7 @@ domains:
       ovirt-engine-password: 123
       deploy-scripts:
         {%- if env.add_plain_repos is defined and env.add_plain_repos|length %}
-        - add_plain_repos.sh
+        - $OST_REPO_ROOT/add_plain_repos.sh
         {%- else %}
         - $OST_REPO_ROOT/common/deploy-scripts/dnf_upgrade.sh
         {%- endif %}
@@ -94,7 +94,7 @@ domains:
     metadata:
       deploy-scripts:
         {%- if env.add_plain_repos is defined and env.add_plain_repos|length %}
-        - add_plain_repos.sh
+        - $OST_REPO_ROOT/add_plain_repos.sh
         {%- else %}
         - $OST_REPO_ROOT/common/deploy-scripts/dnf_upgrade.sh
         {%- endif %}
