--- a/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
@@ -51,7 +51,7 @@ domains:
     metadata:
       deploy-scripts:
         {%- if env.add_plain_repos is defined and env.add_plain_repos|length %}
-        - add_plain_repos.sh
+        - $OST_REPO_ROOT/add_plain_repos.sh
         {%- else %}
         - $OST_REPO_ROOT/common/deploy-scripts/dnf_upgrade.sh
         {%- endif %}
@@ -93,7 +93,7 @@ domains:
         - $OST_REPO_ROOT/common/deploy-scripts/check_node_status.sh
         {%- endif %}
         {%- if env.add_plain_repos is defined and env.add_plain_repos|length %}
-        - add_plain_repos.sh
+        - $OST_REPO_ROOT/add_plain_repos.sh
         {%- else %}
         - $OST_REPO_ROOT/common/deploy-scripts/dnf_upgrade.sh
         {%- endif %}
