--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ pytest==6.2.2
 selenium
 tox
 # network suite deps
-openstacksdk
+openstacksdk==0.36.4
 # there's a conflict between rpm and pip versions on regular el8 hosts
 requests
