implement stages to run ocp installer
Adds stage that runs OCP installer
Creates in a separate stage extended tmpfs and swap file to insure
that we have sufficient resources for openshift installer compilation.

Adds terraform suite to stdci

Signed-off-by: Eli Mesika <emesika@redhat.com>
Change-Id: Ib3d9250d2344432accb6b171b925225ac7f4f812

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -36,6 +36,12 @@ stage:
                     hostdistro: same
         - ansible_suite_master:
             distributions:
+             - el8:
+                 runtime-requirements:
+                   hostdistro: same
+                   support-nesting-level: 2
+        - tr_suite_master:
+            distributions:
               - el8:
                   runtime-requirements:
                     jenkins_master: upstream
