setup: add virt-install for ost-images build
Change-Id: I9746637c5221fb1902b6f9410157c986979823de
Signed-off-by: Michal Skrivanek <michal.skrivanek@redhat.com>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -92,6 +92,7 @@
               - createrepo
               - make
               - rpm-build
+              - virt-install
             state: latest
           become: true
 
