basic: Replace 'async' with 'async_'
'async' is a reserved keyword in Python > 3.6. The SDK
supports using 'async_' instead.

Change-Id: Id5aa141a553a3216cdcb4420d82b4168c660aaf1
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,7 @@ per-file-ignores =
     ost_utils/ost_utils/pytest/*:E231,W391,F403,E302,E501,F811,F401
     ost_utils/ost_utils/selenium/*:E128,E712,F403,F405,E225,F401,E231,F841,E302,W391,E501
     ost_utils/ost_utils/storage_utils/*:E261,F841,E501
-    basic-suite-master/test-scenarios/*:E117,E127,E203,E211,E225,E262,E721,E741,W391,E202,F402,E712,F405,F841,E128,E131,E265,E111,E231,F632,E251,W606,E122,E722,E302,F811,F403,E261,F401,E501
-    he-basic-suite-master/test-scenarios/*:E117,E203,E211,E262,E721,E741,F811,E128,E202,E712,F402,F841,E111,E131,E231,E265,E251,W606,E122,E302,F401,F403,E261,E501
+    basic-suite-master/test-scenarios/*:E117,E127,E203,E211,E225,E262,E721,E741,W391,E202,F402,E712,F405,F841,E128,E131,E265,E111,E231,F632,E251,E122,E722,E302,F811,F403,E261,F401,E501
+    he-basic-suite-master/test-scenarios/*:E117,E203,E211,E262,E721,E741,F811,E128,E202,E712,F402,F841,E111,E131,E231,E265,E251,E122,E302,F401,F403,E261,E501
     hc-basic-suite-master/test-scenarios/*:E117,E203,E211,E265,E741,E202,E261,F403,E302,F401,E501
 show_source = True
