--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,7 @@
 [pytest]
+markers =
+    run: Used for ordering tests
+
 # Logging
 log_format = %(asctime)s,%(msecs)03d %(levelname)-7s [%(name)s] %(message)s (%(module)s:%(lineno)d)
 log_date_format = %Y-%m-%d %H:%M:%S%z
