ansible: disable host reboot after installation
Change-Id: Ifb147d6dd7d7092917c7732ace6827f12d693450
Signed-off-by: Martin Necas <mnecas@redhat.com>

--- a/ansible-suite-master/ovirt-deploy/tasks/bootstrap.yml
+++ b/ansible-suite-master/ovirt-deploy/tasks/bootstrap.yml
@@ -26,6 +26,7 @@
     cluster: "{{ cluster_name }}"
     override_iptables: true
     timeout: 1200
+    reboot_after_installation: false
     poll_interval: 10
   with_together:
     - "{{ host_names}}"
