run_suite: Rename lago templates variables
Change names of lago template variables to match image names.

Change-Id: I7e6bbc554e52f106c4910e3eabbf22e29e4e265e
Signed-off-by: hbraha <hbraha@redhat.com>

--- a/common/init-configs/1_engine_2_hosts.yml
+++ b/common/init-configs/1_engine_2_hosts.yml
@@ -16,7 +16,7 @@ domains:
       - template_name: {{ templates.engine }}
         type: template
         template_type: qcow2
-        path: {{ env.engine_image }}
+        path: {{ env.engine_installed_image }}
         name: root
         dev: vda
         format: qcow2
@@ -51,7 +51,7 @@ domains:
       - template_name: {{ templates.host }}
         type: template
         template_type: qcow2
-        path: {{ env.host_image }}
+        path: {{ env.host_installed_image }}
         name: root
         dev: vda
         format: qcow2
