ansible: workaround for bug 1970277
virtio with iothreads is failing, until it is fixed let's use
virtio-scsi.

This is a copy of I78061a15e48429d72b6f5fe14d10488516255860, for ansible
suite.

Change-Id: Id438b6a45de9c51af7cc9278519407d5a9e1c745
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/ansible-suite-master/ovirt-deploy/tasks/sanity.yml
+++ b/ansible-suite-master/ovirt-deploy/tasks/sanity.yml
@@ -107,7 +107,9 @@
     vm_name: "{{ vm_name1 }}"
     size: 1GiB
     format: cow
-    interface: virtio
+    # FIXME - move back to virtio once we have a libvirt fix for
+    # https://bugzilla.redhat.com/1970277
+    interface: virtio_scsi
     storage_domain: "{{ nfs_name }}"
 
 - name: Create vm pool
