automation: build-artifacts: Use el8
[1] fails for a long time now. I think this is because it's running on
el7 with python2, and we now have code that is python3-only.

[1] https://jenkins.ovirt.org/job/ovirt-system-tests_standard-on-merge/

Change-Id: I5961882d6255748d2a2545b3a215a5bc3c67d3da
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -85,6 +85,8 @@ stage:
       script:
         fromfile: 'automation/{{ substage }}.sh'
   - build-artifacts:
+      distributions:
+          - el8
       script:
         fromfile: 'automation/build-artifacts.sh'
 runtime-requirements:
